Add tailwind config and basic frame structure (#2)

--- a/resources/views/pages/score.edge
+++ b/resources/views/pages/score.edge
@@ -6,7 +6,7 @@
   <title>farscout</title>
   <meta property="fc:frame" content="vNext" />
   {{-- <meta property="fc:frame:image" content="<%= meta_fc_image %>" /> --}}
-  <meta property="fc:frame:button:1" content="Calculate score" />
+  <meta property="fc:frame:button:1" content="Recalculate score" />
   <meta property="fc:frame:button:1:action" content="post" />
   <meta property="fc:frame:post_url" content="/frames" />
 
@@ -16,6 +16,7 @@
   <div class="flex h-full justify-center items-center">
     <div class="text-center">
       <h1 class="text-xl font-bold">gm</h1>
+      <p class="text-sm">Your score is {{score}}</p>
     </div>
   </div>
 </body>
