--- a/resources/views/pages/score.edge
+++ b/resources/views/pages/score.edge
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>farscout</title>
+  <title>farscore</title>
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="/images/thumbnail.png" />
   <meta property="fc:frame:button:1" content="Recalculate score" />
   <meta property="fc:frame:button:1:action" content="post" />
   <meta property="fc:frame:post_url" content="/frames" />
-  <meta property="og:title" content="farscout" />
+  <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="/images/thumbnail.png" />
 
