--- a/resources/views/pages/score.edge
+++ b/resources/views/pages/score.edge
@@ -11,7 +11,7 @@
   <meta property="fc:frame:post_url" content="/frames" />
   <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content="/images/thumbnail.png" />
+  <meta property="og:image" content={{`/generated_images/${score}`}} />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
