--- a/resources/views/pages/leaderboard.edge
+++ b/resources/views/pages/leaderboard.edge
@@ -6,7 +6,7 @@
   <title>Leaderboard</title>
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
-<body class="dark h-full dark:bg-gray-800 dark:text-white">
+<body class="dark dark:bg-gray-800 dark:text-white">
   <div class="container mx-auto px-4">
     <h1 class="text-xl font-bold text-center my-4">Leaderboard</h1>
     <div class="flex flex-col items-center">
