Add neynar validation

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -6,6 +6,7 @@
   <title>farscore</title>
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="/images/thumbnail.png" />
+  <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="Calculate score" />
   <meta property="fc:frame:button:1:action" content="post" />
   <meta property="fc:frame:post_url" content="/frames" />
