--- a/resources/views/pages/top_followers.edge
+++ b/resources/views/pages/top_followers.edge
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>farscore - leaderboard</title>
+  <title>farscore - followers</title>
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="{{asset('images/thumbnail.png')}}" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="My score" />
   <meta property="fc:frame:button:1:action" content="post" />
-  <meta property="fc:frame:button:2" content="Top followers" />
+  <meta property="fc:frame:button:2" content="Leaderboard" />
   <meta property="fc:frame:button:2:action" content="post" />
-  <meta property="fc:frame:button:3" content="Search" />
-  <meta property="fc:frame:button:3:action" content="post" />
-  <meta property="fc:frame:post_url" content="/frames/leaderboard" />
+  <meta property="fc:frame:button:2" content="Leaderboard" />
+  <meta property="fc:frame:button:2:action" content="post" />
+  <meta property="fc:frame:post_url" content="/frames/followers" />
   <meta property="og:title" content="farscore - leaderboard" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="{{asset('images/thumbnail.png')}}" />
