Add several improvements to frames flow

--- a/resources/views/pages/search.edge
+++ b/resources/views/pages/search.edge
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>farscore - search</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content={{route('generated_images.show', [fid])}} />
+  <meta property="fc:frame:image" content="/images/thumbnail.png" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:input:text" content="farcaster username" />
   <meta property="fc:frame:button:1" content="Search" />
@@ -13,7 +13,7 @@
   <meta property="fc:frame:post_url" content="/frames/search" />
   <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content={{route('generated_images.show', [fid])}} />
+  <meta property="og:image" content="/images/thumbnail.png" />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
@@ -21,8 +21,19 @@
   <div class="flex h-full justify-center items-center">
     <div class="text-center">
       <h1 class="text-xl font-bold">gm</h1>
-      <p class="text-sm">Your score is {{score}}</p>
+      <div class="text-center mb-4">
+        <input type="text" id="searchKeyword" placeholder="Enter keyword..." class="dark:text-black">
+        <button onclick="search()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          Search
+        </button>
+      </div>
     </div>
   </div>
+  <script>
+    function search() {
+      const keyword = document.getElementById('searchKeyword').value;
+      window.location.href = `/search?keyword=${keyword}`;
+    }
+  </script>
 </body>
 </html>
