--- a/resources/views/pages/top_followers.edge
+++ b/resources/views/pages/top_followers.edge
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>farscore - followers</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content="{{asset('images/thumbnail.png')}}" />
+  <meta property="fc:frame:image" content="/images/thumbnail.png" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="My score" />
   <meta property="fc:frame:button:1:action" content="post" />
@@ -16,12 +16,12 @@
   <meta property="fc:frame:post_url" content="/frames/followers" />
   <meta property="og:title" content="farscore - leaderboard" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content="{{asset('images/thumbnail.png')}}" />
+  <meta property="og:image" content="/images/thumbnail.png" />
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
 <body class="dark dark:bg-gray-800 dark:text-white">
   <div class="container mx-auto px-4">
-    <h1 class="text-xl font-bold text-center my-4">Leaderboard</h1>
+    <h1 class="text-xl font-bold text-center my-4">Top followers</h1>
     <div class="flex flex-col items-center">
       <ul class="list-none">
         @each(user in topUsers)
