Hardcode post url for frames

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -9,7 +9,7 @@
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="Calculate my score" />
   <meta property="fc:frame:button:1:action" content="post" />
-  <meta property="fc:frame:post_url" content="/frames/main" />
+  <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/main" />
   <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
