--- a/resources/views/pages/leaderboard.edge
+++ b/resources/views/pages/leaderboard.edge
@@ -13,7 +13,7 @@
   <meta property="fc:frame:button:2:action" content="post" />
   <meta property="fc:frame:button:3" content="Search" />
   <meta property="fc:frame:button:3:action" content="post" />
-  <meta property="fc:frame:post_url" content="/frames/leaderboard" />
+  <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/leaderboard" />
   <meta property="og:title" content="farscore - leaderboard" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
