--- a/resources/views/pages/score.edge
+++ b/resources/views/pages/score.edge
@@ -13,7 +13,7 @@
   <meta property="fc:frame:button:2:action" content="post" />
   <meta property="fc:frame:button:3" content="Top Followers" />
   <meta property="fc:frame:button:3:action" content="post" />
-  <meta property="fc:frame:post_url" content="/frames/score" />
+  <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/score" />
   <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content={{route('generated_images.show', [fid])}} />
