--- a/resources/views/pages/search.edge
+++ b/resources/views/pages/search.edge
@@ -10,7 +10,7 @@
   <meta property="fc:frame:input:text" content="farcaster username" />
   <meta property="fc:frame:button:1" content="Search" />
   <meta property="fc:frame:button:1:action" content="post" />
-  <meta property="fc:frame:post_url" content="/frames/search" />
+  <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/search" />
   <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
