--- a/resources/views/pages/top_followers.edge
+++ b/resources/views/pages/top_followers.edge
@@ -13,7 +13,7 @@
   <meta property="fc:frame:button:2:action" content="post" />
   <meta property="fc:frame:button:2" content="Leaderboard" />
   <meta property="fc:frame:button:2:action" content="post" />
-  <meta property="fc:frame:post_url" content="/frames/followers" />
+  <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/followers" />
   <meta property="og:title" content="farscore - leaderboard" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
