Add url hardcode for score page

--- a/resources/views/pages/score.edge
+++ b/resources/views/pages/score.edge
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>farscore</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content={{route('generated_images.show', [fid])}} />
+  <meta property="fc:frame:image" content="https://farscout.xyz{{route('generated_images.show', [fid])}}" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="Search" />
   <meta property="fc:frame:button:1:action" content="post" />
@@ -16,7 +16,7 @@
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/score" />
   <meta property="og:title" content="farscore" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content={{route('generated_images.show', [fid])}} />
+  <meta property="og:image" content="https://farscout.xyz{{route('generated_images.show', [fid])}}" />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
