Add leaderboard and followers image

--- a/resources/views/pages/leaderboard.edge
+++ b/resources/views/pages/leaderboard.edge
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>farscore - leaderboard</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content="https://farscout.xyz/images/thumbnail.png" />
+  <meta property="fc:frame:image" content="https://farscout.xyz{{route('generated_images.leaderboard')}}" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="My score" />
   <meta property="fc:frame:button:1:action" content="post" />
@@ -16,7 +16,7 @@
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/leaderboard" />
   <meta property="og:title" content="farscore - leaderboard" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
+  <meta property="fc:frame:image" content="https://farscout.xyz{{route('generated_images.leaderboard')}}" />
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
 <body class="dark dark:bg-gray-800 dark:text-white">
