Change farscore to farscout and add redirect to FAQ

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>farscore</title>
+  <title>farscout</title>
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="https://farscout.xyz/images/thumbnail.png" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="Calculate my score" />
   <meta property="fc:frame:button:1:action" content="post" />
+  <meta property="fc:frame:button:2" content="FAQ" />
+  <meta property="fc:frame:button:2:action" content="post_redirect" />
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/main" />
-  <meta property="og:title" content="farscore" />
+  <meta property="og:title" content="farscout" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
+
 <body class="dark h-full dark:bg-gray-800 dark:text-white">
   <div class="flex h-full justify-center items-center">
     <div class="text-center">
@@ -23,4 +27,5 @@
     </div>
   </div>
 </body>
+
 </html>
