--- a/resources/views/pages/search.edge
+++ b/resources/views/pages/search.edge
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>farscore - search</title>
+  <title>farscout - search</title>
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="https://farscout.xyz/images/thumbnail.png" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
@@ -11,12 +12,13 @@
   <meta property="fc:frame:button:1" content="Search" />
   <meta property="fc:frame:button:1:action" content="post" />
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/search" />
-  <meta property="og:title" content="farscore" />
+  <meta property="og:title" content="farscout" />
   <meta property="og:description" content="revealing your farcaster score" />
   <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
+
 <body class="dark h-full dark:bg-gray-800 dark:text-white">
   <div class="flex h-full justify-center items-center">
     <div class="text-center">
@@ -36,4 +38,5 @@
     }
   </script>
 </body>
+
 </html>
