Remove main image

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>farscout</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content="https://farscout.xyz/images/main.png" />
+  <meta property="fc:frame:image" content="https://farscout.xyz/images/thumbnail.png" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="Calculate my score" />
   <meta property="fc:frame:button:1:action" content="post" />
@@ -15,7 +15,7 @@
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/main" />
   <meta property="og:title" content="farscout" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content="https://farscout.xyz/images/main.png" />
+  <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
