add welcome message

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -23,7 +23,8 @@
 <body class="dark h-full dark:bg-gray-800 dark:text-white">
   <div class="flex h-full justify-center items-center">
     <div class="text-center">
-      <h1 class="text-xl font-bold">gm</h1>
+      <h1 class="text-xl font-bold mt-4">gm</h1>
+      <p class="mt-5">Share this page on farcaster to start looking at your score!</p>
     </div>
   </div>
 </body>
