tweak image routing

--- a/resources/views/pages/top_followers.edge
+++ b/resources/views/pages/top_followers.edge
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>farscout - followers</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content="https://farscout.xyz{{route('generated_images.followers', [fid])}}" />
+  <meta property="fc:frame:image" content="https://farscout.xyz/generated_images/followers/{{fid}}" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="My score" />
   <meta property="fc:frame:button:1:action" content="post" />
@@ -19,7 +19,7 @@
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/followers" />
   <meta property="og:title" content="farscout - leaderboard" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="fc:frame:image" content="https://farscout.xyz{{route('generated_images.followers', [fid])}}" />
+  <meta property="fc:frame:image" content="https://farscout.xyz/generated_images/followers/{{fid}}" />
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
 
