--- a/resources/views/pages/search.edge
+++ b/resources/views/pages/search.edge
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>farscout - search</title>
   <meta property="fc:frame" content="vNext" />
-  <meta property="fc:frame:image" content="https://farscout.xyz/images/thumbnail.png" />
+  <meta property="fc:frame:image" content="https://farscout.xyz/images/main.png" />
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:input:text" content="farcaster username" />
   <meta property="fc:frame:button:1" content="Search" />
@@ -14,7 +14,7 @@
   <meta property="fc:frame:post_url" content="https://farscout.xyz/frames/search" />
   <meta property="og:title" content="farscout" />
   <meta property="og:description" content="revealing your farcaster score" />
-  <meta property="og:image" content="https://farscout.xyz/images/thumbnail.png" />
+  <meta property="og:image" content="https://farscout.xyz/images/main.png" />
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
