shorten top followers

--- a/resources/views/pages/leaderboard.edge
+++ b/resources/views/pages/leaderboard.edge
@@ -10,7 +10,7 @@
   <meta property="fc:frame:image:aspect_ratio" content="1:1" />
   <meta property="fc:frame:button:1" content="My score" />
   <meta property="fc:frame:button:1:action" content="post" />
-  <meta property="fc:frame:button:2" content="Top followers" />
+  <meta property="fc:frame:button:2" content="Followers" />
   <meta property="fc:frame:button:2:action" content="post" />
   <meta property="fc:frame:button:3" content="Search" />
   <meta property="fc:frame:button:3:action" content="post" />
