--- a/resources/views/pages/score.edge
+++ b/resources/views/pages/score.edge
@@ -12,7 +12,7 @@
   <meta property="fc:frame:button:1:action" content="post" />
   <meta property="fc:frame:button:2" content="Leaderboard" />
   <meta property="fc:frame:button:2:action" content="post" />
-  <meta property="fc:frame:button:3" content="Top Followers" />
+  <meta property="fc:frame:button:3" content="Followers" />
   <meta property="fc:frame:button:3:action" content="post" />
   <meta property="fc:frame:button:4" content="FAQ" />
   <meta property="fc:frame:button:4:action" content="post_redirect" />
